adicionado efeito hover nos botões

--- a/Public/alunos/cadastro.html
+++ b/Public/alunos/cadastro.html
@@ -29,7 +29,7 @@
         <div id="y">
             <label for="curso"><h2>Curso</h2></label>
             <select id="curso">
-                <option value="">Selecione o Curso</option>
+                <option value="">Selecione o tipo de usuário</option>
                 <option value="1">DevT</option>
             </select>
         </div>
