--- a/Public/index.html
+++ b/Public/index.html
@@ -13,7 +13,7 @@
         <img src="img/senai.png" alt="">
         <form id="form-login" onsubmit="entrar(event)">
             <div id="inputs">
-                <input type="text" placeholder="Login" id="login" required>
+                <input type="email" placeholder="Login" id="login" required>
                 <input type="password" placeholder="Senha" id="senha" required>
                 <button type="submit">Entrar</button>
                 <div id="resposta"></div>
