fix front-end verPresenca

--- a/Public/alunos/verPresenca.html
+++ b/Public/alunos/verPresenca.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img src="http://localhost:3000/img/senai.png" alt="">
+        <img src="/img/senai.png" alt="">
         <div class="search-container">
             <input type="text" id="searchInput" class="search-input" placeholder="Pesquisar por usuários">
             <button type="button" class="search-button">
