--- a/Public/livros/addEmprestimo.html
+++ b/Public/livros/addEmprestimo.html
@@ -12,7 +12,7 @@
         <img src="senai.png" alt="">
     </header>
     <div class="le">
-        <a href="http://localhost:3000/livros/"><h1>Livros</h1></a>
+        <a href="http://localhost:3000/livros/verLIvros.html"><h1>Livros</h1></a>
         <a href="/livros/verEmprestimo.html"><h1>Empréstimos</h1></a>
         <a href="http://localhost:3000/alunos/verPresenca.html"><h1>Presença</h1></a>
     </div>
