--- a/Public/livros/verEmprestimo.html
+++ b/Public/livros/verEmprestimo.html
@@ -11,14 +11,14 @@
     <header>
         <img src="/img/senai.png" alt="">
         <div class="search-container">
-            <input type="text" id="searchInput" class="search-input" placeholder="Pesquisar...">
+            <input type="text" id="searchInput" class="search-input" placeholder="Pesquisar por alunos">
             <button type="button" class="search-button">
                 <i class="fa fa-search"></i> <!-- Usando FontAwesome para o ícone da lupa -->
             </button>
         </div>
     </header>
     <div class="le">
-        <a href=""><h1>Livros</h1></a>
+        <a href="/livros/verLivros.html"><h1>Livros</h1></a>
         <a href="/livros/verEmprestimo.html"><h1>Empréstimos</h1></a>
         <a href="/alunos/verPresenca.html"><h1>Presença</h1></a>
     </div>
