--- a/Public/alunos/verPresenca.html
+++ b/Public/alunos/verPresenca.html
@@ -18,7 +18,7 @@
         </div>
     </header>
     <div class="le">
-        <a href="http://localhost:3000/livros/emprestimo.html"><h1>Livros</h1></a>
+        <a href="http://localhost:3000/livros/verLivros.html"><h1>Livros</h1></a>
         <a href="http://localhost:3000/livros/verEmprestimo.html"><h1>Empréstimos</h1></a>
         <a href=""><h1>Presença</h1></a>
     </div>
