erros para corrigir

--- a/Public/alunos/cadastro.html
+++ b/Public/alunos/cadastro.html
@@ -46,7 +46,7 @@
 
             const cadastro = {
                 Nome_Completo: document.getElementById('nome').value,
-                ID_Curso: document.getElementById('curso').value,
+                ID_Tipo: parseInt(document.getElementById('curso').value),
                 Email: document.getElementById('email').value
             }
 
