corrigido problemas de cadastro e registrar empréstimos

--- a/Public/livros/verEmprestimo.html
+++ b/Public/livros/verEmprestimo.html
@@ -144,17 +144,21 @@
             }
         }
 
-        async function atualizarStatus(id) {
-            if (!id || typeof id !== 'number') {
-            alert('ID inválido para atualização de status.');
-            return;
+        async function atualizarStatus(emprestimoId, exemplarId) {
+            if (!emprestimoId || typeof emprestimoId !== 'number' || !exemplarId || typeof exemplarId !== 'number') {
+                alert('ID inválido para atualização de status.');
+                return;
             }
+            const Ids = {
+                emprestimoId: emprestimoId,
+                exemplarId: exemplarId
+            };
 
             try {
                 const response = await fetch('/atualizarStatus', {
                     method: 'POST',
                     headers: {'Content-Type': 'application/json'},
-                    body: JSON.stringify({id})
+                    body: JSON.stringify(Ids)
                 });
 
                 const message = await response.text();
@@ -178,7 +182,7 @@
                         <p><strong>Status:</strong> ${item.Status}</p>
                         <div class="botoes">
                             <button onclick="fecharPopup()">Fechar</button>
-                            <button onclick="atualizarStatus(${item.ID_Emprestimo})">Livro devolvido</button>    
+                            <button onclick="atualizarStatus(${item.ID_Emprestimo}, ${item.ID_Exemplar})">Livro devolvido</button>    
                         </div>
                     </div>
                 </div>
