adicionado opções cadastro

--- a/Public/alunos/cadastro.html
+++ b/Public/alunos/cadastro.html
@@ -31,6 +31,16 @@
             <select id="curso">
                 <option value="">Selecione o tipo de usuário</option>
                 <option value="1">DevT</option>
+                <option value="2">Curso técnico de Logistica</option>
+                <option value="3">Docentes</option>
+                <option value="4">Assistente administrativo</option>
+                <option value="5">Curso de operador de processos logísticos</option>
+                <option value="6">Mecânico de usinagem</option>
+                <option value="7">Cliente externo</option>
+                <option value="8">Ex-alunos</option>
+                <option value="9">Formação inicial e continuada</option>
+                <option value="10">Funcionários</option>
+                <option value="11">Outros</option>
             </select>
         </div>
         <a href="http://localhost:3000/alunos/presença.html"><button type="submit">Cadastrar</button></a>
